# coldfront-initializer

./: .gitignore  README.md  REUSE.toml  pyproject.toml
src/coldfront_initializer/: __init__.py  version.py
src/coldfront_initializer/examples/: allocations.yml  custom_field_choicesets.yml  groups.yml  object_permissions.yml  projects.yml  resource_types.yml  tags.yml  tenant_groups.yml  users.yml
src/coldfront_initializer/initializers/: __init__.py  allocations.py  base.py  custom_field_choicesets.py  custom_fields.py  groups.py  object_permissions.py  projects.py  resource_types.py  resources.py  tags.py  tenant_groups.py  tenants.py  users.py
src/coldfront_initializer/initializers/yaml/: custom_fields.yml  resource_types.yml  resources.yml  tenants.yml
src/coldfront_initializer/management/commands/: __init__.py  copy_initializer_examples.py  copy_initializers_examples.py  load_initializer_data.py  load_test_data.py
